k8s/prod/frontend.yaml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: prod
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: gcr.io/intrepid-alloy-493208-k9/frontend:v2
          ports:
            - containerPort: 80 
---
#Service
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: prod
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
