k8s/prod/ingressBackend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: prod-ingress
  namespace: prod

spec:
  ingressClassName: nginx
  rules:
  - host: prod.ecomp.codes
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
